# ProSelection

./: .env  .gitignore  Cargo.toml  Dockerfile  openapi.json
.github/workflows/: prod_deploy.yml  rust.yml  test_deploy.yml
migrations/2023-08-28-070601_users/: down.sql  up.sql
migrations/2023-12-18-203551_users/: up.sql
migrations/2023-12-18-204907_follow/: down.sql  up.sql
migrations/2023-12-18-212620_favourite/: down.sql  up.sql
migrations/2024-01-27-167320_matches/: up.sql
migrations/2024-01-27-167320_users/: up.sql
migrations/2024-01-27-212621_matches/: up.sql
migrations/2024-01-27-212622_users/: up.sql
migrations/2024-03-03-131413_users/: up.sql
migrations/2024-03-05-173553_users/: up.sql
migrations/2024-04-07-091903_follow/: down.sql  up.sql
migrations/2024-05-01-144500_matches/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/data/: mod.rs
src/data/database/: mod.rs
src/data/repository/: mod.rs  objects.rs
src/database/: mod.rs
src/database/auth/: auth_database.rs  mod.rs  reg_objects.rs  reg_validation.rs
src/database/favourites/: favourite_db.rs  mod.rs
src/database/tests/: mod.rs
src/database/user/: mod.rs  user_db.rs
src/handlers/: mod.rs
src/handlers/auth/: fields_valid.rs  login.rs  mod.rs  objects.rs  refresh.rs  registration.rs
src/handlers/favourite/: favourite_handler.rs  response.rs
src/handlers/user/: actions.rs  common.rs  mod.rs  search.rs  single_user.rs
src/presenter/: mod.rs
src/presenter/catcher/: catcher.rs  mod.rs
src/presenter/handlers/: mod.rs
src/presenter/routes/: mod.rs  routes_setup.rs
src/repository/favourite/: objects.rs  repository.rs
src/routes/: mod.rs  routes.rs  routes_setup.rs
src/utils/: hasher.rs  jwt_objects.rs  jwt_utils.rs  mod.rs
(+138 files in other folders)
