[package]
name = "pro_selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
diesel_migrations = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
swagger = "6.3.0"
swagger-ui = "0.1.5"
chrono = "0.4.19"
# rocket-swagger-ui = "0.1.5"
rocket_okapi = "0.5"
schemars = "0.8.13"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
# jwt
jwt = "0.16"
hmac = "0.12.1"
sha2 = "0.10.8"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool"]
