[package]
name = "pro_selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = [
    "diesel_postgres_pool",
] }
# rocket_okapi = "0.5"

diesel = { version = "2.1.4", features = ["postgres", "uuid", "r2d2"] }
diesel_migrations = "1.4.0"

serde = { version = "1.0.103", features = ["derive"] }

serde_json = "1.0.44"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
swagger = "6.3.0"
swagger-ui = "0.1.5"
chrono = "0.4.19"

schemars = "0.8.13"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
log = "0.4.20"
# jwt
jwt = "0.16"
hmac = "0.12.1"
sha2 = "0.10.8"
